--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <img src="images/spotify-logo.png" alt="Spotify Logo" />
+        <img class="brand" src="images/spotify-logo.png" alt="Spotify Logo" />
         <ul>
           <li><a href="#">Premium</a></li>
           <li><a href="#">Discover</a></li>
@@ -19,6 +19,9 @@
         </ul>
       </nav>
     </header>
+    <div>
+      <img class="concert" src="images/landing.jpg" alt="concert">
+    </div>
     <section class="hero">
       <h1>Music for everyone.</h1>
       <p>Spotify is now free on mobile, tablet and computer. Listen to the right music, wherever you are.</p>
